# sdl2_testbed

./: .clang-format  .editorconfig  CMakeLists.txt  Makefile  README.md
src/: clipboard_tests.c  main.c  screenshot_test.c  screenshot_test_sdl2.c  video_info.c  viewport_test.c  window_events.c  window_surface.c
